Fix color contrast

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -19,7 +19,7 @@ a, a:visited, a:focus, a:hover {
 button, input[type="submit"] {
   margin: 1rem auto;
   border-radius: 2rem;
-  background-color: #4AA3DF;
+  background-color: #1E77B3;
   padding: 1.5rem 1.5rem;
   text-transform: uppercase;
   color: #FFFFFF;
