--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -8,7 +8,7 @@
   z-index: 99999;
   margin: 0;
   padding: 0;
-  background-color: #4AA3DF;
+  background-color: #1E77B3;
   border: 0;
   border-radius: 50%;
   -webkit-transform: rotate(0deg);
