--- a/src/styles/SkillLevel.css
+++ b/src/styles/SkillLevel.css
@@ -10,7 +10,7 @@ progress[value]::-webkit-progress-bar {
 }
 
 progress[value]::-webkit-progress-value {
-    background-color: #4AA3DF;
+    background-color: #1E77B3;
     border-radius: 1rem;
     background-size: 100% 100%, 100% 100%;
 }
